Ensure font size and icon spacing remains consistent for ADW and Menu

--- a/ClientSide/StyleSheets/Slate/AdditionalDetailWidget.less
+++ b/ClientSide/StyleSheets/Slate/AdditionalDetailWidget.less
@@ -17,6 +17,8 @@ div.AdditionalDetailWidget
 		}
 		
 		color: @ThemeColorInverse;
+		font-size: 14px;
+		
 		margin-left: 10px;
 		margin-top: -10px;
 		&::after
