--- a/ClientSide/StyleSheets/Slate/Menu.less
+++ b/ClientSide/StyleSheets/Slate/Menu.less
@@ -3,10 +3,16 @@ ul.Menu
 	&> li
 	{
 		color: #4D4D4D;
+		font-size: 14px;
+		
 		&> a
 		{
 			color: inherit;
 			padding: 5px 15px;
+			&> i.fa
+			{
+				width: 32px;
+			}
 		}
 		&.Header
 		{
